crates/ndc-clickhouse-core/tests/snapshots/query_builder__chinook Parameterized SQL@01_simple_queries_02_with_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: parameterized_sql
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/01_simple_queries_02_with_predicate.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("albumId" Int32, "artistId" Int32, "title" String)))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(
          tuple(
            "_row"."_field_albumId" AS "albumId",
            "_row"."_field_artistId" AS "artistId",
            "_row"."_field_title" AS "title"
          )
        ) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."AlbumId" AS "_field_albumId",
          "_origin"."ArtistId" AS "_field_artistId",
          "_origin"."Title" AS "_field_title"
        FROM
          "Chinook"."Album" AS "_origin"
        WHERE
          "_origin"."ArtistId" = { p0 :Int32 }
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
